# ragent

./: .env.build.example  .env.inference.example  .env.offline.example  .gitattributes  .gitignore  MEP_COMPONENT.md  MEP_E2E_VALIDATION_PLAN.md  OFFLINE_DEPLOY.md  README.md  config.json  copy_to_udisk.sh  init.py  integrations.py  mep_dependency_bootstrap.py  models_download.py  package.json  process.py  pyproject.toml  requirements.txt  run_mep_local.py  singlefile.py  框架图提示词.md
MEP_platform_rule/: MEP_running.yaml  Validated_ragent-mep-test_docker_full_chain.sh  Validated_ragent-mep-test_docker_vllm.sh  Validated_ragent-mep-test_docker_vllm_requirements.freeze.txt  docker-vllm_ascend_910B_0.13.0rc0.md  模型包及pipeline部署.txt  组件包 异步场景.txt  组件包项目样例-qwen_vllm_async_copilot-README.md  组件包项目样例-qwen_vllm_async_copilot-Response.md
MEP_platform_rule/MEP-QA/: MEP-question.md
MEP_platform_rule/others/: 3.2 模型包 WIKI2022030301666.txt  3.3 代码组件包 WIKI2021101206391.txt  【MLOps使用之MEP】MEP快速跑通第一个云侧推理Demo.txt  基于电影推荐场景的一次WiseMLOps端到端实践.txt  异步场景组件包开发指南 异步场景组件包接口说明 WIKI2021101206450.txt  异步场景组件包接口说明.txt
MEP_platform_rule/qwen_vllm_async_copilot/: config.json  init.py  process.py  process_sync.py  组件包和模型包目录结构说明.txt
benchmark/: 0403.groundtruth.md  0403.kg_5-milvus.brief.eval.md  0403.kg_5.brief.eval.md  0403_q1.baseline.md  0403_q1.kg_5.v1.brief.md  0403_q1.kg_5.v1.md  0403_q1.kg_5.v2.brief.md  0403_q1.kg_5.v2.md  0403_q1.milvus.md  0403_q2.baseline.md  0403_q2.kg_5.v1.brief.md  0403_q2.kg_5.v1.md  0403_q2.kg_5.v2.brief.md  0403_q2.kg_5.v2.md  0403_q2.milvus.md  0403_q3.baseline.md  0403_q3.kg_5.v1.brief.md  0403_q3.kg_5.v1.md  0403_q3.kg_5.v2.brief.md  0403_q3.kg_5.v2.md  0403_q3.milvus.md  0403_q4.baseline.md  0403_q4.kg_5.v1.brief.md  0403_q4.kg_5.v1.md  0403_q4.kg_5.v2.brief.md  0403_q4.kg_5.v2.md  0403_q4.milvus.md  0403_q5.baseline.md  0403_q5.kg_5.v1.brief.md  0403_q5.kg_5.v1.md  0403_q5.kg_5.v2.brief.md  0403_q5.kg_5.v2.md  0403_q5.milvus.md  0403_q6.baseline.md  0403_q6.kg_5.v1.brief.md  0403_q6.kg_5.v1.md  0403_q6.kg_5.v2.brief.md  0403_q6.kg_5.v2.md  0403_q6.milvus.md  0403_q7.baseline.md  (+17 more)
benchmark/groundth/: 0403_q1.groundtruth.md  0403_q2.groundtruth.md  0403_q3.groundtruth.md  0403_q4.groundtruth.md  0403_q5.groundtruth.md  0403_q6.groundtruth.md  0403_q7.groundtruth.md
benchmark/latency_20260421_212037/: env_snapshot.txt  graph.rerank_on.cache_cold.run_1.time.txt  results.tsv
benchmark/latency_20260421_212345/: config.txt  graph.rerank_off.cache_cold.run_1.metrics.json  graph.rerank_off.cache_cold.run_1.time.txt  graph.rerank_off.cache_cold.run_1.trace.json  graph.rerank_off.cache_cold.run_2.metrics.json  graph.rerank_off.cache_cold.run_2.time.txt  graph.rerank_off.cache_cold.run_2.trace.json  graph.rerank_off.cache_cold.run_3.metrics.json  graph.rerank_off.cache_cold.run_3.time.txt  graph.rerank_off.cache_cold.run_3.trace.json  graph.rerank_off.cache_cold.run_4.metrics.json  graph.rerank_off.cache_cold.run_4.time.txt  graph.rerank_off.cache_cold.run_4.trace.json  graph.rerank_off.cache_cold.run_5.metrics.json  graph.rerank_off.cache_cold.run_5.time.txt  graph.rerank_off.cache_cold.run_5.trace.json  graph.rerank_off.cache_warm.prime.metrics.json  graph.rerank_off.cache_warm.prime.time.txt  graph.rerank_off.cache_warm.prime.trace.json  graph.rerank_off.cache_warm.run_1.metrics.json  graph.rerank_off.cache_warm.run_1.time.txt  graph.rerank_off.cache_warm.run_1.trace.json  graph.rerank_off.cache_warm.run_2.metrics.json  graph.rerank_off.cache_warm.run_2.time.txt  graph.rerank_off.cache_warm.run_2.trace.json  graph.rerank_off.cache_warm.run_3.metrics.json  graph.rerank_off.cache_warm.run_3.time.txt  graph.rerank_off.cache_warm.run_3.trace.json  graph.rerank_off.cache_warm.run_4.metrics.json  graph.rerank_off.cache_warm.run_4.time.txt  graph.rerank_off.cache_warm.run_4.trace.json  graph.rerank_off.cache_warm.run_5.metrics.json  graph.rerank_off.cache_warm.run_5.time.txt  graph.rerank_on.cache_cold.run_1.time.txt  (+101 more)
example/: 2021-2023 FNDDS At A Glance - FNDDS Nutrient Values.xlsx  core-data_recipe_compact.csv  core-data_recipe_compact_100.csv  core-data_recipe_flat.csv
presentation/: README.md  SFT数据合成方案.md  主要技术贡献跟成果说明.md  报告模板.docx  框架图提示词_v2.md
ragent/: __init__.py  base.py  benchmarking.py  constants.py  inference_runtime.py  keyword_extraction.py  llm.py  mep_adapter.py  mep_embedding_runtime.py  namespace.py  operate.py  prompt.py  ragent.py  rerank.py  runtime_env.py  utils.py  utils_graph.py  wide_table.py
script/: latency_service.sh  latency_test.sh  query.sh  stats_provenance.py  task.sh
tests/: test_backend_config.py  test_diversified_graph_retrieval.py  test_export_mep_transformers_embedding_wheelhouse.py  test_export_mep_vllm_ascend_wheelhouse.py  test_inference_runtime_healthcheck.py  test_keyword_extraction_fallback.py  test_mep_adapter.py  test_mep_component_bundle.py  test_mep_embedding_runtime.py  test_mep_keyword_fallback_assets.py  test_mep_layout_builder.py  test_mep_upload_package_builder.py  test_mineru_output_naming.py  test_model_package_bundle.py  test_networkx_storage.py  test_openai_embedding_http.py  test_pdf_insert_failure_semantics.py  test_priority_limit_async.py  test_query_cache_backend_selection.py  test_query_cache_semantics.py  test_rag_insert_batch_size.py  test_ragent_revision_semantics.py  test_rerank_proxy.py  test_run_mep_local.py  test_runtime_env.py  test_sqlite_kv_storage.py  test_sqlite_query_cache_storage.py  test_validate_mep_wheelhouse.py
tools/: backfill_chunk_text_embeddings.py  bootstrap_offline_runtime.sh  build_docker_wheelhouses.sh  build_mep_layout.py  build_mep_upload_packages.py  build_wheelhouse.sh  collect_mep_image_info.sh  collect_mep_image_runtime_info.sh  export_mep_keyword_fallback_assets.py  export_mep_test_bundle_to_udisk.sh  export_mep_transformers_embedding_wheelhouse.py  export_mep_vllm_ascend_wheelhouse.py  latency_report.py  latency_runner.py  mep_package_utils.py  mep_site_packages.py  offline_runtime.py  preflight_mep_upload_packages.py  validate_mep_full_chain_result.py  validate_mep_wheelhouse.py
(+525 files in other folders)
