[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragent"
dynamic = ["version"]
#-->> modified by acs
authors = [
    {name = "ACS"}
]
description = "Ragent: Dynamic and Intelligent RAG via Agent Architecture"
#-->> ended by acs
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp",
    "configparser",
    "dotenv",
    "future",
    "mineru",
    "nano-vectordb",
    "networkx",
    "numpy",
    "pandas>=2.0.0",
    "pipmaster",
    "pydantic",
    "python-dotenv",
    "pyuca",
    "requests",
    "setuptools",
    "tenacity",
    "tiktoken",
    "xlsxwriter>=3.1.0",
]

[project.optional-dependencies]
# OpenAI / 兼容接口 LLM 提供商
openai = [
    "openai",
    "httpx",
]

# HuggingFace 本地模型
hf = [
    "torch",
    "transformers",
]

# Ollama 本地模型
ollama = [
    "ollama",
]

# 知识图谱后端（可多选）
neo4j = ["neo4j"]
milvus = ["pymilvus"]
faiss = ["faiss-cpu"]

# API 服务端
api = [
    "aiofiles",
    "ascii_colors",
    "asyncpg",
    "distro",
    "fastapi",
    "httpcore",
    "httpx",
    "jiter",
    "openai",
    "passlib[bcrypt]",
    "PyJWT",
    "python-jose[cryptography]",
    "python-multipart",
    "pytz",
    "uvicorn",
]

# 安装全部可选依赖
all = [
    "ragent[openai,hf,ollama,neo4j,milvus,faiss,api]",
]

[tool.setuptools.packages.find]
include = ["ragent*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ragent.__version__"}

[tool.uv.sources]
mineru = { path = "MinerU-master", editable = true }

[tool.ruff]
target-version = "py310"
