[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragent"
dynamic = ["version"]
#-->> modified by acs
authors = [
    {name = "ACS"}
]
description = "Ragent: Dynamic and Intelligent RAG via Agent Architecture"
#-->> ended by acs
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp",
    "configparser",
    "dotenv",
    "future",
    "httpx",
    "litellm",
    "nano-vectordb",
    "networkx",
    "numpy",
    "pipmaster",
    "pydantic",
    "python-dotenv",
    "pyuca",
    "requests",
    "setuptools",
    "tenacity",
    "tiktoken",
]

[project.optional-dependencies]
# 运行已建好的图谱，执行 onehop / multihop / chat
inference = []

# 文档解析、Markdown/宽表建图
build = [
    "aiofiles",
    "markdown-it-py",
    "mineru[pipeline,vlm]==3.0.8",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "xlsxwriter>=3.1.0",
]

# LiteLLM / OpenAI-compatible LLM 提供商
openai = [
    "litellm",
    "openai",
    "httpx",
]

# HuggingFace 本地模型
hf = [
    "gliner[stanza]",
    "torch",
    "transformers",
]

# Ollama 本地模型
ollama = [
    "ollama",
]

# 知识图谱后端（可多选）
neo4j = ["neo4j"]
milvus = ["pymilvus"]
faiss = ["faiss-cpu"]

# API 服务端
api = [
    "aiofiles",
    "ascii_colors",
    "asyncpg",
    "distro",
    "fastapi",
    "httpcore",
    "httpx",
    "jiter",
    "litellm",
    "openai",
    "passlib[bcrypt]",
    "PyJWT",
    "python-jose[cryptography]",
    "python-multipart",
    "pytz",
    "uvicorn",
]

# 安装全部可选依赖
all = [
    "ragent[inference,build,openai,hf,ollama,neo4j,milvus,faiss,api]",
]

[tool.setuptools.packages.find]
include = ["ragent*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ragent.__version__"}

[tool.ruff]
target-version = "py39"
